# forgottenserver

./: .travis.yml  CMakeLists.txt  CODE_STYLE.md  appveyor.yml  config.lua
.github/workflows/: build-ubuntu.yml  build-vcpkg.yml
data/events/scripts/: player.lua
data/lib/compat/: compat.lua
data/talkactions/: talkactions.xml
src/: CMakeLists.txt  ban.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  connection.cpp  connection.h  container.h  creature.h  database.cpp  database.h  databasemanager.cpp  databasetasks.h  enums.h  game.cpp  game.h  guild.cpp  guild.h  house.cpp  house.h  ioguild.cpp  iologindata.cpp  iologindata.h  iomapserialize.cpp  iomarket.cpp  item.h  items.cpp  luascript.cpp  luascript.h  monster.cpp  monster.h  movement.cpp  movement.h  npc.cpp  otpch.h  otserv.cpp  player.cpp  player.h  (+10 more)
src/networking/: CMakeLists.txt  networkmessage.cpp  networkmessage.h  outputmessage.cpp  outputmessage.h  protocol.cpp  protocol.h  protocolgame.cpp  protocolgame.h  protocollogin.cpp  protocolold.cpp  protocolstatus.cpp  rsa.cpp
vc14/: theforgottenserver.vcxproj
